--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     <footer>
       <p class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
+          target="_blank"
           >Frontend Mentor</a
         >. Coded by
         <a href="https://www.frontendmentor.io/profile/joaojgabriel"
